--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
         username: ${{secrets.USERNAME}}
         server: ${{secrets.IP}}
         ssh_private_key: ${{secrets.SSH}}
-        local_path: ws/target/ws-0.0.1-SNAPSHOT.jar
+        local_path: ws/target/ornek-ws-0.0.1-SNAPSHOT.jar
         remote_path: /home/cagdas_karabulut
